--- a/public/css/design.css
+++ b/public/css/design.css
@@ -576,6 +576,9 @@
 #frame .content .messages ul li.sent p {
   background: #435f7a;
   color: #f5f5f5;
+  word-wrap    : break-word;
+  overflow-wrap: break-word;
+
 }
 #frame .content .messages ul li.replies img {
   float: right;
@@ -584,6 +587,10 @@
 #frame .content .messages ul li.replies p {
   background: #f5f5f5;
   float: right;
+  word-wrap    : break-word;
+overflow-wrap: break-word;
+
+
 }
 #frame .content .messages ul li img {
   width: 22px;
